finishing Client Communicator